# botko

./: .env.example  .env.old  .gitignore  .mergify.yml  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  app_test.py  conftest.py  db.py  dev-requirements.in  dev-requirements.txt  gunicorn.conf.py  manage.py  migrate_data.py  models.py  pylintrc  pyproject.toml  requirements.in  requirements.txt  scheduler.py  scheduler_test.py
.claude/: settings.local.json
.deploy/: botko-scheduler.service  botko.service  nginx.conf  run.sh  run_scheduler.sh  update.sh
.github/workflows/: python-app.yml  python.yml  test-deploy.yml  upgrade-dependencies.yml
bot/: models.py  slack_app.py  slack_cache.py  slack_urls.py  utils.py  views.py
bot/migrations/: 0001_initial.py  0002_alter_birthday_table_alter_karma_table.py  0003_channel_slackuser_karma_channel_ref_message_and_more.py  0004_backfill_slack_users_and_channels.py
bot/templates/bot/: base.html  index.html  top_givers.html  top_posts.html  top_receivers.html
bot/tests/: test_lock_file.py  test_models.py  test_scheduler.py  test_slack_app.py  test_views.py
botko/: settings.py  urls.py  wsgi.py
