[project]
name = "botko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gunicorn",
    "python-dotenv",
    "schedule",
    "sentry-sdk",
    "slack_bolt",
    "starlette",
    "urllib3",
    "uvicorn",
    # Dev
    "freezegun",
    "mypy",
    "pylint",
    "pytest",
    "pytest-watch",
    "ruff",
]
