[project]
name = "botko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django",
    "gunicorn",
    "psycopg[binary]",
    "python-dotenv",
    "schedule",
    "sentry-sdk",
    "slack_bolt",
    "urllib3",
    # Dev
    "freezegun",
    "mypy",
    "pytest",
    "pytest-django",
    "pytest-watcher",
    "ruff"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "botko.settings"
